[package]
name = "vros-steamvr-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
ovr_overlay_sys = { git = "https://github.com/nil-vr/ovr_overlay" }
thiserror = "1.0.31"
vros-steamvr-core = { path = "../vros-steamvr-core" }
