[package]
name = "vros-steamvr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
miette = "5.1.1"
tokio = { version = "1.20.0", features = ["io-util", "macros", "process", "rt"] }
tokio-stream = "0.1.9"
vros-steamvr-core = { path = "../vros-steamvr-core" }
